--- a/App/EmailTemplate/new.html
+++ b/App/EmailTemplate/new.html
@@ -217,7 +217,7 @@
                                 <tr>
                                   <td style="padding-right: 0px;padding-left: 0px;" align="center">
 
-                                    <img align="center" border="0" src="@{parameters('frontend')}/logo512.png"
+                                    <img align="center" border="0" src="@{parameters('frontend')}/Erobi.png"
                                       alt="Sandbox Logo" title="Sandbox Logo"
                                       style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 23%;max-width: 126.5px;"
                                       width="126.5" />
