--- a/App/EmailTemplate/delete.html
+++ b/App/EmailTemplate/delete.html
@@ -392,8 +392,7 @@
 
                               <div
                                 style="color: #ecf0f1; line-height: 140%; text-align: center; word-wrap: break-word;">
-                                <p style="font-size: 14px; line-height: 140%;">If you have any questions, feel free
-                                  to call Gjon.
+                                <p style="font-size: 14px; line-height: 140%;">If you have any questions, please email help@ org.com.
                               </div>
 
                             </td>
